Adding Authentication and Identity to the API

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,10 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection":  "Data Source=reactivites.db"
+        "DefaultConnection": "Data Source=portal_active.db"
+    },
+    "JwtSettings": {
+        "Issuer": "",
+        "Key": "ABCDABCD12341234SPDJSD20340FJPOSAJFDPODSAFP0-0320-9324837-2384923AJOIDAJFAJ-238092OIDSAJFOIJFDSAOIJ-23409238OAFDHIADFH"
     }
 }
