--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=portal_active.db"
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Portal_Active;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     },
     "JwtSettings": {
         "Issuer": "",
